# raytracer

./: CMakeLists.txt  README.md
include/: camera.h  color.h  hitable.h  ray.h  sphere.h  utils.h  vec.h  vec3.h
include/mats/: dielectric.h  lambertian.h  material.h  materials.h  metallic.h
src/: camera.cpp  color.cpp  hitable.cpp  main.cpp  ray.cpp  sphere.cpp  utils.cpp  vec3.cpp
src/mats/: dielectric.cpp  lambertian.cpp  material.cpp  metallic.cpp
